--- a/Labo Linux 1/notities/Labos.html
+++ b/Labo Linux 1/notities/Labos.html
@@ -1270,65 +1270,64 @@ body .markdown-body
 <h3 id="werken-met-vi"><a name="user-content-werken-met-vi" href="#werken-met-vi" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Werken met vi</h3>
 <p>vi .exrc</p>
 <p>voeg toe: <br />
-    syntax on<br />
-    set number</p>
+    * syntax on<br />
+    * set number</p>
 <h3 id="oefeningen"><a name="user-content-oefeningen" href="#oefeningen" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Oefeningen</h3>
 <p>vi eerste.sh<br />
-<pre><code>    #!/bin/bash
-    pwd
-    date
+<pre><code class="sh">#!/bin/bash
+pwd
+date
 </code></pre></p>
 <p>vi tweede.sh</p>
-<pre><code>  1 #!/bin/bash
-  2 # geeft de meegegeven argumenten op het scherm mbv een for-lus
-  4 for i in $@
-  5 do
-  6    echo $i
-  7 done
+<pre><code>#!/bin/bash
+# geeft de meegegeven argumenten op het scherm mbv een for-lus
+for i in $@
+do
+  echo $i
+done
 </code></pre>
 
 <p>vi derde.sh</p>
-<pre><code>  1 #!/bin/bash
-  2 for i in $@
-  3 do
-  4         echo &quot;Je zal nu $i verwijderen. j/n&quot;
-  5         read ja
-  6         if [ $ja = &quot;j&quot; ]; then
-  7            *      rm $i
-  8            *      echo &quot;$i verwijderd&quot;
-  9         else
- 10            *      echo &quot;$i niet verwijderd&quot;
- 11         fi
- 12 done
+<pre><code>#!/bin/bash
+for i in $@
+do
+  echo &quot;Je zal nu $i verwijderen. j/n&quot;
+    read ja
+      if [ $ja = &quot;j&quot; ]; then
+        rm $i
+        echo &quot;$i verwijderd&quot;
+      else
+        echo &quot;$i niet verwijderd&quot;
+      fi
+done
 </code></pre>
 
 <p>vi vierde.sh</p>
-<pre><code>  1 #!/bin/bash
-  3 for i in $#
-  4 do
-  5         chmod 755 $i
-  6         chown jan $i
-  7 done
+<pre><code>#!/bin/bash
+for i in $#
+do
+  chmod 755 $i
+  chown jan $i
+done
 </code></pre>
 
 <p>vi getal.sh</p>
-<pre><code>  1 #!/bin/bash
-  2 #print een getal als het tussen 0 en 9 ligt. Is het iets anders wordt het
-  3 #script beëindigd.
-  4 clear
-  5 i=1
-  6 while [ $i -eq 1 ]
-  7 do
-  8         echo &quot;geef een getal in.&quot;
-  9         read getal
- 10         if [ $getal -le 9 ]&amp;&amp;[ $getal -ge 0 ]
- 11         then
- 12            *      echo &quot;Je getal $getal is tussen 0 en 9&quot;
- 13         else
- 14            *      expr $i + 1
- 15            *      exit
- 16         fi
- 17 done 
+<pre><code>#!/bin/bash
+#print een getal als het tussen 0 en 9 ligt. Is het iets anders wordt het script beëindigd.
+clear
+i=1
+while [ $i -eq 1 ]
+do
+  echo &quot;geef een getal in.&quot;
+  read getal
+  if [ $getal -le 9 ]&amp;&amp;[ $getal -ge 0 ]
+  then
+    echo &quot;Je getal $getal is tussen 0 en 9&quot;
+  else
+    expr $i + 1
+    exit
+  fi
+done 
 </code></pre>
 
 <h2 id="labo-6-gebruikersaccounts"><a name="user-content-labo-6-gebruikersaccounts" href="#labo-6-gebruikersaccounts" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Labo 6: Gebruikersaccounts</h2>
