--- a/Labo Linux 1/notities/Labos.html
+++ b/Labo Linux 1/notities/Labos.html
@@ -1180,10 +1180,7 @@ body .markdown-body
 <h2 id="labo-4-rechten"><a name="user-content-labo-4-rechten" href="#labo-4-rechten" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>labo 4: Rechten</h2>
 <h3 id="oefening-1_2"><a name="user-content-oefening-1_2" href="#oefening-1_2" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Oefening 1</h3>
 <h4 id="1"><a name="user-content-1" href="#1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>1</h4>
-<p><code>cp -r /etc ~/etc</code><br />
-<code>cd etc</code><br />
-<code>pwd</code><br />
-<code>ls -al</code></p>
+<p><code>cp -r /etc ~/etc</code>cd etc<code></code>pwd<code></code>ls -al`</p>
 <h4 id="2"><a name="user-content-2" href="#2" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>2</h4>
 <ol>
 <li>Eerste letter is d</li>
