--- a/Labo Linux 1/notities/Labos.html
+++ b/Labo Linux 1/notities/Labos.html
@@ -1432,4 +1432,6 @@ done
 <li><code>chgrp gebruikers2 test1</code></li>
 <li><code>su piet; vi test1</code> test1 kan niet geopend worden.</li>
 <li><code>su karel</code> karel heeft volledige rechten.</li>
-</ol></article></body></html>
+</ol>
+<h3 id="nutcracker"><a name="user-content-nutcracker" href="#nutcracker" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Nutcracker</h3>
+<p><code>nutcracker-1.9/nutcracker</code> <code>/etc/shadow /sbin/nutcracker-1.9/words</code></p></article></body></html>
