--- a/Labo Linux 1/notities/Labos.html
+++ b/Labo Linux 1/notities/Labos.html
@@ -1082,11 +1082,11 @@ body .markdown-body
 <h3 id="oefening-3"><a name="user-content-oefening-3" href="#oefening-3" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>oefening 3</h3>
 <ol>
 <li>
-<p><code>ls</code>: geeft informatie over de bestanden in de huidige directory<br />
-        * <code>-a</code>: toon ook de bestanden die verborgen zijn (beginnen met .)<br />
-        * <code>-b</code>: toont newlines als \n etc&hellip;<br />
-        * <code>-B</code>: negeert bestanden die eindigen in ~ (meestal backups)<br />
-        * <code>-l</code>: gebruik het lange formaat voor de bestanden</p>
+<p><code>ls</code>: geeft informatie over de bestanden in de huidige directory</p>
+<pre><code>* `-a`: toon ook de bestanden die verborgen zijn (beginnen met .)
+* `-b`: toont newlines als \n etc&hellip;
+* `-B`: negeert bestanden die eindigen in ~ (meestal backups)
+* `-l`: gebruik het lange formaat voor de bestanden</code></pre>
 <ul>
 <li><code>cp</code>: kopiëren van bestanden naar een ander bestand.<ul>
 <li><code>-b</code>: maak een backup van de destination-bestanden</li>
