--- a/Labo Linux 1/notities/Labos.html
+++ b/Labo Linux 1/notities/Labos.html
@@ -1082,27 +1082,32 @@ body .markdown-body
 <h3 id="oefening-3"><a name="user-content-oefening-3" href="#oefening-3" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>oefening 3</h3>
 <ol>
 <li>
-<p><code>ls</code>: geeft informatie over de bestanden in de huidige directory</p>
-<pre><code>* `-a`: toon ook de bestanden die verborgen zijn (beginnen met .)
-* `-b`: toont newlines als \n etc&hellip;
-* `-B`: negeert bestanden die eindigen in ~ (meestal backups)
-* `-l`: gebruik het lange formaat voor de bestanden</code></pre>
+<p>:</p>
 <ul>
-<li><code>cp</code>: kopiëren van bestanden naar een ander bestand.<ul>
+<li>
+<p><code>ls</code>: geeft informatie over de bestanden in de huidige directory</p>
+<ul>
+<li><code>-a</code>: toon ook de bestanden die verborgen zijn (beginnen met .)</li>
+<li><code>-b</code>: toont newlines als \n etc&hellip;</li>
+<li><code>-B</code>: negeert bestanden die eindigen in ~ (meestal backups)</li>
+<li><code>-l</code>: gebruik het lange formaat voor de bestanden<ul>
+<li><code>cp</code>: kopiëren van bestanden naar een ander bestand.</li>
+</ul>
+</li>
 <li><code>-b</code>: maak een backup van de destination-bestanden</li>
 <li><code>-f</code>: als het destination-bestand niet bereikt kan worden, wordt het verwijderd en opnieuw gemaakt</li>
 <li><code>-n</code>: overschrijf geen bestanden</li>
-<li><code>-i</code>: prompt wel of niet te overschrijven</li>
+<li><code>-i</code>: prompt wel of niet te overschrijven<ul>
+<li><code>rm</code>: verwijder een bepaald bestand of directory</li>
 </ul>
 </li>
-<li><code>rm</code>: verwijder een bepaald bestand of directory<ul>
 <li><code>-i</code>: prompt elk van de verwijderingen</li>
 <li><code>-I</code>: vraag maar één keer voor meer dan 3 bestanden</li>
 <li><code>-v</code>: leg uit welke bestanden verwijderd worden</li>
-<li><code>-r</code>: ook subdirectories worden verwijderd</li>
+<li><code>-r</code>: ook subdirectories worden verwijderd<ul>
+<li><code>man</code>: toont handleidingen voor commando&rsquo;s</li>
 </ul>
 </li>
-<li><code>man</code>: toont handleidingen voor commando&rsquo;s<ul>
 <li><code>-d</code>: debug, toon als er fouten voorkomen</li>
 <li><code>-f</code>: korte beschrijving</li>
 <li><code>-w</code>: toon waar de handleiding zich bevindt</li>
