--- a/Labo Linux 1/notities/Labos.html
+++ b/Labo Linux 1/notities/Labos.html
@@ -1122,10 +1122,12 @@ body .markdown-body
 <li><code>who</code>: toont alle actieve schermen (terminals en spaces)</li>
 </ul>
 </li>
-</ol>
-<p>3.<code>more</code>: toont alles wat op één scherm past, scroll naar beneden met enter<br />
-    * <code>less</code>: toont alles op verschillende spaties, je moet op &ldquo;q&rdquo; drukken om een ander commando te doen.</p>
-<ol>
+<li>
+<p><code>more</code>: toont alles wat op één scherm past, scroll naar beneden met enter</p>
+<ul>
+<li><code>less</code>: toont alles op verschillende spaties, je moet op &ldquo;q&rdquo; drukken om een ander commando te doen.</li>
+</ul>
+</li>
 <li>
 <p>gebruik voor de eerste vijf regels van dat bestand <code>head -n 5 bash.bashrc</code> en voor de laatste vijf <code>tail -n 5 bash.bashrc</code>. De optie <code>-f</code> zorgt ervoor dat als het bestand wijzigt dat het scherm ook wijzigt.</p>
 </li>
